# Transcript-Analyzer

./: .gitignore  README.md  config.py  fastapi_app.py  gradio_ui.py  launch_app.sh  main.py  paths.py  pyproject.toml
api/: models.py
api/routes/: pipeline.py
config/: .env_template
data/: transcript.txt
src/models/: base_model.py  gemini_model.py  model_factory.py  openai_model.py
src/prompts/: clustering_service_prompt.txt  extraction_assignees_prompt.txt  extraction_category_prompt.txt  extraction_deadlines_prompt.txt  extraction_priority_prompt.txt  filtering_service_prompt.txt
src/services/: chunking_service.py  clustering_service.py  extraction_service.py  filtering_service.py  pipeline_service.py
src/services/extraction/: assignee_extractor.py  base_extractor.py  category_extractor.py  deadlines_extractor.py  priority_extractor.py
